--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
       crossorigin="anonymous"
     />
-    <link rel="icon" href="./img/vizion-logo.webp" type="image/webp" />
+    <link rel="icon" href="public/img/vizion-logo.webp" type="image/webp" />
   </head>
   <body>
     <div class="container">
@@ -65,7 +65,7 @@
           class="col-lg-6 col-md-12 col-sm-12 d-flex justify-content-center align-items-center col"
         >
           <img
-            src="./img/saut-parachute-hero.jpg"
+            src="public/img/saut-parachute-hero.jpg"
             alt="logo"
             class="img-fluid rounded-5"
             style="height: 70%"
@@ -105,7 +105,7 @@
           class="col-6 d-none d-lg-block d-flex justify-content-center align-items-center"
         >
           <img
-            src="./img/saut-parachute-hero.jpg"
+            src="public/img/saut-parachute-hero.jpg"
             alt="logo"
             class="img-fluid rounded-5"
             style="height: 80%"
