--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       crossorigin="anonymous"
     />
     <link rel="icon" href="public/img/vizion-logo.webp" type="image/webp" />
-    <link href="src/scss/style.css" rel="stylesheet" />
+    <link href="dist/style.css" rel="stylesheet" />
   </head>
   <body>
     <div class="container">
