--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
       crossorigin="anonymous"
     />
     <link rel="icon" href="public/img/vizion-logo.webp" type="image/webp" />
-    <link href="dist/style.css" rel="stylesheet" />
+    <link href="src/scss/style.scss" rel="stylesheet" />
   </head>
   <body>
     <div class="container">
+      s
       <nav class="navbar navbar-expand-lg navbar-light">
         <a class="navbar-brand fst-italic fs-1 me-5" href="#">Vizion</a>
         <button
