--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
       <div class="row">
         <div
-          class="col-lg-6 col-md-12 col-sm-12 my-md-5 my-sm-5 d-flex flex-column justify-content-center align-items-center"
+          class="col-lg-6 col-md-12 col-sm-12 my-lg-0 my-5 d-flex flex-column justify-content-center align-items-center"
         >
           <div class="row">
             <button
@@ -103,13 +103,13 @@
           </div>
         </div>
         <div
-          class="col-6 d-none d-lg-block d-flex justify-content-center align-items-center"
+          class="col-6 d-none d-lg-block d-flex justify-content-center align-items-center pt-5"
         >
           <img
             src="public/img/saut-parachute-hero-2.jpg"
             alt="logo"
-            class="img-fluid rounded-5"
-            style="height: 80%"
+            class="img-fluid rounded-5 m-5"
+            style="height: 60%"
           />
         </div>
       </div>
@@ -148,7 +148,7 @@
     <section class="postVol" id="postVol">
       <div class="d-flex justify-content-center align-items-center spaceDiv">
         <!-- card -->
-        <div class="card rounded-5" style="width: 1000px">
+        <div class="card rounded-5 mx-5" style="width: 1000px">
           <div class="card-body">
             <!-- grid -->
             <div class="container text-center">
@@ -304,19 +304,19 @@
         <div class="row py-4">
           <div class="col-4">
             <h2
-              class="text-white d-flex justify-content-center pb-3 fst-italic fs-5"
+              class="text-white d-flex justify-content-center text-center pb-3 fst-italic fs-5"
               style="text-decoration: underline"
             >
               Navigation
             </h2>
             <a
-              class="d-flex justify-content-center text-white fs-6"
+              class="d-flex justify-content-center text-center text-white fs-6"
               href="#"
               style="text-decoration: none"
               ><p>Aides</p></a
             >
             <a
-              class="d-flex justify-content-center text-white fs-6"
+              class="d-flex justify-content-center text-center text-white fs-6"
               href="#"
               style="text-decoration: none"
               ><p>Mode mal voyant</p></a
@@ -324,7 +324,7 @@
           </div>
           <div class="col-4">
             <h2
-              class="text-white d-flex justify-content-center pb-3 fst-italic fs-5"
+              class="text-white d-flex justify-content-center pb-3 text-center fst-italic fs-5"
               style="text-decoration: underline"
             >
               Contact
@@ -338,7 +338,7 @@
               </p></a
             >
             <a
-              class="d-flex justify-content-center text-white fs-6"
+              class="d-flex justify-content-center text-center text-white fs-6"
               href="#"
               style="text-decoration: none"
               ><p>Venir nous voir</p></a
@@ -346,19 +346,19 @@
           </div>
           <div class="col-4">
             <h2
-              class="text-white d-flex justify-content-center pb-3 fst-italic fs-5"
+              class="text-white d-flex text-center justify-content-center pb-3 fst-italic fs-5"
               style="text-decoration: underline"
             >
               Mentions légales
             </h2>
             <a
-              class="d-flex justify-content-center text-white fs-6"
+              class="d-flex justify-content-center text-center text-white fs-6"
               href="#"
               style="text-decoration: none"
               ><p>Condition d’utilisations</p></a
             >
             <a
-              class="d-flex justify-content-center text-white fs-6"
+              class="d-flex justify-content-center text-center text-white fs-6"
               href="#"
               style="text-decoration: none"
               ><p>CGV</p></a
