--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
     <section class="postVol" id="postVol">
       <div class="d-flex justify-content-center align-items-center spaceDiv">
         <!-- card -->
-        <div class="card rounded-5 mx-5" style="width: 1000px">
+        <div class="card rounded-5 mx-5" style="width: 90%">
           <div class="card-body">
             <!-- grid -->
             <div class="container text-center">
