--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           class="col-lg-6 col-md-12 col-sm-12 d-flex text-white fst-italic fs-1 lh-1 justify-content-center fw-lighter align-items-center"
         >
           Votre entreprise spécialisée <br />
-          dans les saut en <br />
+          dans les sauts en <br />
           parachute crépusculaire
         </div>
       </div>
@@ -120,24 +120,33 @@
       <div
         class="col d-flex flex-column justify-content-center align-items-center spaceDiv"
       >
-        <p class="fs-2 row fst-italic text-white fw-normal mt-5">
+        <p
+          class="fs-2 row fst-italic text-center justify-content-center text-white fw-normal mt-5"
+          style="width: 90%"
+        >
           Vous souhaitez rejoindre l’aventure ?
         </p>
-        <p class="fs-2 row fst-italic text-white opacity-50 fw-normal">
+        <p
+          class="fs-2 row fst-italic text-center justify-content-center text-white opacity-50 fw-normal"
+          style="width: 90%"
+        >
           Faites votre réservation dès maintenant
         </p>
         <button
-          class="btn btn-primary rounded-pill fst-italic fs-2 mt-5"
-          style="width: 400px"
+          class="btn btn-primary rounded-pill fst-italic fs-2 mt-5 mx-5"
+          style="width: 90%"
         >
           Réserver votre vol
         </button>
-        <p class="fs-2 mt-5 row fst-italic text-white opacity-50 fw-lighter">
+        <p
+          class="fs-2 mt-5 row fst-italic text-center justify-content-center text-white opacity-50 fw-lighter"
+          style="width: 90%"
+        >
           Vous vous sentez généreux ?
         </p>
         <button
           class="btn btn-primary rounded-pill fst-italic fs-4 mt-5 opacity-50"
-          style="width: 300px; height: 75px"
+          style="width: 70%; height: 75px"
         >
           Offrir un vol
         </button>
@@ -148,7 +157,7 @@
     <section class="postVol" id="postVol">
       <div class="d-flex justify-content-center align-items-center spaceDiv">
         <!-- card -->
-        <div class="card rounded-5 mx-5" style="width: 90%">
+        <div class="card rounded-5 mx-5" style="width: 90">
           <div class="card-body">
             <!-- grid -->
             <div class="container text-center">
@@ -176,9 +185,8 @@
                 >
                   <h2 class="text-nowrap">Vol longue durée</h2>
                   <h4 class="fs-6 fw-lighter w-75 mx-auto pt-5">
-                    Initiez-vous à la magie du parachutisme avec un vol au
-                    coucher du soleil, idéal pour les débutants à la recherche
-                    de sensations douces.
+                    Profitez d’un vol prolongé pour admirer pleinement le
+                    coucher de soleil, une expérience immersive dans les airs.
                   </h4>
                   <button
                     class="btn btn-primary rounded-pill fst-italic fs-4 mt-5 d-flex justify-content-center align-items-center"
@@ -194,9 +202,9 @@
                 >
                   <h2>Vol sensation</h2>
                   <h4 class="fs-6 fw-lighter w-75 mx-auto pt-5">
-                    Initiez-vous à la magie du parachutisme avec un vol au
-                    coucher du soleil, idéal pour les débutants à la recherche
-                    de sensations douces.
+                    Pour les amateurs de frissons, ce vol vous offre une montée
+                    d’adrénaline avec des manœuvres aériennes audacieuses sous
+                    la lueur dorée du crépuscule.
                   </h4>
                   <button
                     class="btn btn-primary rounded-pill fst-italic fs-4 mt-5 d-flex justify-content-center align-items-center"
@@ -212,9 +220,9 @@
                 >
                   <h2>Initiation vol solo</h2>
                   <h4 class="fs-6 fw-lighter w-75 mx-auto pt-5">
-                    Initiez-vous à la magie du parachutisme avec un vol au
-                    coucher du soleil, idéal pour les débutants à la recherche
-                    de sensations douces.
+                    Apprenez les bases du parachutisme en solo et réalisez votre
+                    premier vol, encadré par des professionnels, avec une vue à
+                    couper le souffle.
                   </h4>
                   <button
                     class="btn btn-primary rounded-pill fst-italic fs-4 mt-5 d-flex justify-content-center align-items-center"
@@ -230,9 +238,9 @@
                 >
                   <h2>Vol à deux</h2>
                   <h4 class="fs-6 fw-lighter w-75 mx-auto pt-5">
-                    Initiez-vous à la magie du parachutisme avec un vol au
-                    coucher du soleil, idéal pour les débutants à la recherche
-                    de sensations douces.
+                    Partagez cette aventure unique à deux, en tandem, tout en
+                    survolant des paysages illuminés par les couleurs du
+                    crépuscule.
                   </h4>
                   <button
                     class="btn btn-primary rounded-pill fst-italic fs-4 mt-5 d-flex justify-content-center align-items-center"
@@ -247,10 +255,10 @@
                   class="col-12 col-md-4 mb-3 d-flex flex-column justify-content-center align-items-center py-5"
                 >
                   <h2>Planifiez votre vol</h2>
-                  <h4 class="fs-6 fw-lighter w-75 mx-auto pt-5">
-                    Initiez-vous à la magie du parachutisme avec un vol au
-                    coucher du soleil, idéal pour les débutants à la recherche
-                    de sensations douces.
+                  <h4 class="fs-6 fw-lighter w-75 mx-auto pt-5 w-25">
+                    Personnalisez votre expérience en choisissant la durée, le
+                    parcours et les sensations pour un vol totalement adapté à
+                    vos envies.
                   </h4>
                   <button
                     class="btn btn-primary rounded-pill fst-italic fs-4 mt-5 d-flex justify-content-center align-items-center"
@@ -269,7 +277,7 @@
         <!-- fin card -->
       </div>
       <p
-        class="text-white justify-content-center align-items-center d-flex my-5 py-5 fs-1 fst-italic fw-light opacity-75"
+        class="d-flex justify-content-center align-items-center text-white my-5 py-5 fs-1 fst-italic fw-light opacity-75 text-center w-100"
       >
         Vous avez déjà effectué votre vol ?
       </p>
