--- a/index.html
+++ b/index.html
@@ -170,8 +170,8 @@
                 >
                   <h2 class="text-nowrap">Vol découverte</h2>
                   <h4
-                    class="fs-6 fw-lighter w-75 mx-auto pt-5"
-                    style="max-width: 200px; height: 150px"
+                    class="fs-5 fw-lighter w-75 mx-auto pt-5"
+                    style="max-width: 200px; height: 200px"
                   >
                     Initiez-vous à la magie du parachutisme avec un vol au
                     coucher du soleil, idéal pour les débutants à la recherche
@@ -192,8 +192,8 @@
                 >
                   <h2 class="text-nowrap">Vol longue durée</h2>
                   <h4
-                    class="fs-6 fw-lighter w-75 mx-auto pt-5"
-                    style="max-width: 200px; height: 150px"
+                    class="fs-5 fw-lighter w-75 mx-auto pt-5"
+                    style="max-width: 200px; height: 200px"
                   >
                     Profitez d’un vol prolongé pour admirer pleinement le
                     coucher de soleil, une expérience immersive dans les airs.
@@ -213,8 +213,8 @@
                 >
                   <h2 class="text-nowrap">Vol sensation</h2>
                   <h4
-                    class="fs-6 fw-lighter w-75 mx-auto pt-5"
-                    style="max-width: 200px; height: 150px"
+                    class="fs-5 fw-lighter w-75 mx-auto pt-5"
+                    style="max-width: 200px; height: 200px"
                   >
                     Pour les amateurs de frissons, ce vol vous offre une montée
                     d’adrénaline avec des manœuvres aériennes audacieuses sous
@@ -235,8 +235,8 @@
                 >
                   <h2 class="text-nowrap">Initiation vol solo</h2>
                   <h4
-                    class="fs-6 fw-lighter w-75 mx-auto pt-5"
-                    style="max-width: 200px; height: 150px"
+                    class="fs-5 fw-lighter w-75 mx-auto pt-5"
+                    style="max-width: 200px; height: 200px"
                   >
                     Apprenez les bases du parachutisme en solo et réalisez votre
                     premier vol, encadré par des professionnels, avec une vue à
@@ -257,8 +257,8 @@
                 >
                   <h2 class="text-nowrap">Vol à deux</h2>
                   <h4
-                    class="fs-6 fw-lighter w-75 mx-auto pt-5"
-                    style="max-width: 200px; height: 150px"
+                    class="fs-5 fw-lighter w-75 mx-auto pt-5"
+                    style="max-width: 200px; height: 200px"
                   >
                     Partagez l’expérience avec un proche et vivez ensemble des
                     moments inoubliables au coucher du soleil.
@@ -278,8 +278,8 @@
                 >
                   <h2 class="text-nowrap">Planifiez votre vol</h2>
                   <h4
-                    class="fs-6 fw-lighter w-75 mx-auto pt-5"
-                    style="max-width: 200px; height: 150px"
+                    class="fs-5 fw-lighter w-75 mx-auto pt-5"
+                    style="max-width: 200px; height: 200px"
                   >
                     Personnalisez votre expérience en choisissant la durée, le
                     parcours et les sensations pour un vol totalement adapté à
@@ -303,7 +303,7 @@
         <!-- fin card -->
       </div>
       <p
-        class="d-flex justify-content-center align-items-center text-white my-5 py-5 fs-1 fst-italic fw-light opacity-75 text-center w-100"
+        class="d-flex justify-content-center align-items-center text-white my-5 py-5 fs-1 fst-italic fw-light opacity-75 text-center"
       >
         Vous avez déjà effectué votre vol ?
       </p>
