--- a/index.html
+++ b/index.html
@@ -119,8 +119,9 @@
     <section class="presentationGradient"></section>
 
     <section class="reservation">
+      <div class="spaceDiv d-none d-md-block"></div>
       <div
-        class="col d-flex flex-column justify-content-center align-items-center spaceDiv"
+        class="col d-flex flex-column justify-content-center align-items-center"
       >
         <p
           class="fs-2 row fst-italic text-center justify-content-center text-white fw-normal mt-5"
@@ -158,7 +159,8 @@
     <section class="reservationGradient"></section>
 
     <section class="postVol" id="postVol">
-      <div class="d-flex justify-content-center align-items-center spaceDiv">
+      <div class="spaceDiv d-none d-md-block"></div>
+      <div class="d-flex justify-content-center align-items-center">
         <!-- card -->
         <div class="card rounded-5 mx-5" style="width: 90">
           <div class="card-body">
