--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
           Faites votre réservation dès maintenant
         </p>
         <a
-          class="btn btn-primary rounded-pill fst-italic fs-2 mt-5 mx-5 w-50 btn-custom"
+          class="btn btn-primary rounded-pill fst-italic fs-2 mt-5 mx-5 px-4 btn-custom text-nowrap"
           href="#postVol"
         >
           Réserver votre vol
@@ -148,7 +148,7 @@
           Vous vous sentez généreux ?
         </p>
         <a
-          class="btn btn-primary rounded-pill fst-italic fs-4 mt-5 opacity-50 w-25 btn-custom"
+          class="btn btn-primary rounded-pill fst-italic fs-4 mt-5 opacity-50 px-3 btn-custom text-nowrap"
           href="#postVol"
         >
           Offrir un vol
